<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_tv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_1"
    tools:context=".ui.home.tv_shows.TVShowsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/black_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tvOnTheAir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            android:scrollbarStyle="outsideOverlay"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:ignore="MissingConstraints,RtlHardcoded"
            tools:listitem="@layout/list_new_movie" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:foregroundGravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_tvOnTheAir"
            tools:ignore="MissingConstraints,UnknownIdInLayout">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/vip"
                    tools:ignore="MissingConstraints" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/fullepisode"
                    tools:ignore="MissingConstraints" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toEndOf="@+id/cardView3"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,RtlHardcoded">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/calender"
                    tools:ignore="ContentDescription,MissingConstraints" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="30dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toEndOf="@+id/cardView4"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,RtlHardcoded">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/fire"
                    tools:ignore="ContentDescription,MissingConstraints" />

            </androidx.cardview.widget.CardView>

            <TextView
                style="@style/TextMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vip"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free"
                app:layout_constraintEnd_toEndOf="@+id/cardView4"
                app:layout_constraintStart_toStartOf="@+id/cardView4"
                app:layout_constraintTop_toBottomOf="@+id/cardView4"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/TextMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_button"
                app:layout_constraintEnd_toEndOf="@+id/cardView3"
                app:layout_constraintStart_toStartOf="@+id/cardView3"
                app:layout_constraintTop_toBottomOf="@+id/cardView3"
                tools:ignore="MissingConstraints" />

            <TextView
                style="@style/TextMediumBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                app:layout_constraintEnd_toEndOf="@+id/cardView2"
                app:layout_constraintStart_toStartOf="@+id/cardView2"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView3"
            style="@style/text_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/most_popular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popularTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:listitem="@layout/list_most_popular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>